--- a/src/style/style.general.css
+++ b/src/style/style.general.css
@@ -6,12 +6,15 @@
   --blue: #006BF6;
   --blacklike: #312f2f;
 }
+html {
+  font-size: 18px;
+}
 body {
   margin: 0;
   font-family: "Gilroy", sans-serif;
   /*font-family: "DIN Pro", sans-serif;*/
   font-weight: 300;
-  font-size: 18px;
+  /*font-size: 18px;*/
   overflow-x: hidden;
   color: var(--blacklike);
 }
