--- a/src/style/style.mobile.css
+++ b/src/style/style.mobile.css
@@ -1,6 +1,9 @@
 @media all and (max-width: 480px){
-  body {
+  html {
     font-size: 16px;
+  }
+  body {
+    /*font-size: 16px;*/
   }
   .section-title {
     font-size: 20px;
