--- a/src/app/master/header/header.component.html
+++ b/src/app/master/header/header.component.html
@@ -7,22 +7,19 @@
 
              src="assets/images/logo-mini.png"
              alt="Логотип">
-<!--        <img class="logo__text-image image" *ngIf="true" src="../../../assets/images/text-red-logo-micro.png" alt="Творческая Мастерская">-->
-<!--        <div *ngIf="this.currentPath != '/'" class="tm-text-logo">-->
-<!--          <div class="tm-text-logo_t">ТВОРЧЕСКАЯ</div>-->
-<!--          <div class="tm-text-logo_m">МАСТЕРСКАЯ</div>-->
-<!--        </div>-->
       </a>
       <a routerLink="/" class="logo__link-wrapper">
         <img
-             [@text-logo]="textLogoState"
-             class="logo__text-image"
-             src="assets/images/text-red-logo-micro.png"
-             alt="Творческая Мастерская">
+          [@text-logo]="textLogoState"
+          class="logo__text-image"
+          src="assets/images/text-red-logo-micro.png"
+          alt="Творческая Мастерская">
       </a>
     </div>
-    <div class="burger-button" (click)="burgerButtonTapped()"></div>
-    <div class="nav" (click)="closeButtonTapped()" [class.mobileNavHidden]="shouldHideMobileNav">
+    <div class="burger-button" (click)="onBurgerButtonClicked()"></div>
+    <div class="nav"
+         [@nav]="this.navState"
+         (click)="this.navState == 'mobileVisible' ? closeButtonTapped(): ''">
       <div class="nav-item"><a routerLink="" class="nav-link">Главная</a></div>
       <!--      <div class="nav-item"><a routerLink="about" class="nav-link">О нас</a></div>-->
       <div class="nav-item"><a routerLink="events" class="nav-link">Афиша</a></div>
